# CHIP-8

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  chip8  flake.nix  helper.txt
.cache/clangd/index/: chip8.c.37D1633282604EAE.idx  chip8.c.E0E0AD2BD982988A.idx  chip8.h.0FF39337FC60F2A5.idx  chip8.h.1F9A1158E09449D5.idx  chip8.h.46BA38C3053B8C9C.idx  display.c.9E1C924462073B5E.idx  display.c.FF368E6C0E2D8F2E.idx  display.h.4D2FF8AA9253CBEF.idx  display.h.6C23F71AFE2B193D.idx  display.h.AAB38525BE2367E3.idx  input.c.C8AFB8F9A58C3146.idx  input.c.EDB958D52D9C1ABB.idx  input.h.08A15CFA6C8C39D1.idx  input.h.5293296AD42261F9.idx  input.h.F28BAA8A54D90182.idx  main.c.1AFB3C5830238E8A.idx  main.c.59857C6AD48869F0.idx  timer.c.1033CD49376B5DFD.idx  timer.c.6FDE3A01ED7C8BBC.idx  timer.h.396A04AC371A502F.idx  timer.h.4616C25B98A1F358.idx  timer.h.680C3B8694B4FE52.idx
include/: chip8.h  display.h  input.h  timer.h
src/: Makefile  chip8.c  chip8.h  display.c  display.h  helper.txt  input.c  input.h  main  main.c  timer.c
